# pylogconf

./: .gitignore  .myenv  .mypy.ini  README.md  README.rst  pylogconf.py  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
.github/workflows/: bl.yml
config/: helpers.py  project.py  python.py  version.py
doc/: TODO.txt
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pylogconf.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  modules.doctree  pylogconf.doctree
docs/_modules/: index.html
docs/_modules/pylogconf/: core.html
docs/_sources/: index.rst.txt  pylogconf.rst.txt
docs/_static/: basic.css  doctools.js  searchtools.js
pylogconf/: core.py  static.py  version.py
snipplets/: main.md.mako
sphinx/: conf.py  config.rst  index.rst  modules.rst  pylogconf.rst
sphinx.moved/: pylogconf.rst
src/: pylogconf.py
src/pylogconf/: core.py  static.py
templates/: README.rst.mako  setup.py.mako
