[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylogconf"
version = "0.0.38"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "correctly configure python logging"
readme = "README.md"
license = "MIT"
keywords=[
    "python",
    "logging",
    "configuration",
    "easy",
    "yaml",
    "json",
    "debug",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pyfakeuse",
    "logging_tree",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pylogconf"
"Bug Tracker" = "https://github.com/veltzer/pylogconf/issues"
"Documentation" = "https://veltzer.github.io/pylogconf"
"Download" = "https://pypi.org/project/pylogconf/"
"Repository" = "https://github.com/veltzer/pylogconf"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/pylogconf"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pylogconf/",
    "README.md",
    "LICENSE",
    "pyproject.toml"
]
exclude = [
    ".gitignore",
    ".github/",
    "tests/",
    "docs/",
    "config/",
    "*.md",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.envs.default]
installer = "uv"
